--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 html, body{
     margin: 0;
     padding: 0;
+    background-color: #40FFCE;
 }
 .wrapp{
     width: 100%;
     min-height: 100vh;
+    text-align: center;
 }
 .container{
     width: 400px;
@@ -28,6 +30,7 @@ html, body{
     position: absolute;
 }
 .back{
+    background: white;
     text-align: center;
     line-height: 100px;
     font-size: 2rem;
@@ -52,6 +55,15 @@ html, body{
 button{
     width: 100px;
     height: auto;
+    margin-top: 20px;
+    padding: 10px 0;
+    font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 10px;
+    box-shadow: 1px 1px 5px orange;
+    background: white;
+    outline: none;
+}
+button:hover{
+    box-shadow: inset 1px 1px 5px orange;
 }
